--- a/static/pug/index.pug
+++ b/static/pug/index.pug
@@ -2,7 +2,7 @@ include blocks/blocks
 
 doctype html
 html(lang="ru")
-	+head('Главная')
+	+head('Оглавление')
 	body.content
 		.content__container
 			.content__item
