--- a/static/sass/blocks/standart/developers.sass
+++ b/static/sass/blocks/standart/developers.sass
@@ -1,9 +1,13 @@
 .developers
+	display: inline-block
 	position: relative
 
 	text-align: left
 
 	margin-top: auto
+
+	@include pad
+		margin-top: 13px
 
 	&__href
 		position: relative
