--- a/static/pug/blocks/standart/head.pug
+++ b/static/pug/blocks/standart/head.pug
@@ -9,5 +9,5 @@ mixin head(title)
 		meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
 		title #{title}
 		link(rel="stylesheet", href="./static/css/styles.css")
-		//- link(rel="icon", type="image/x-icon", href="./static/i/favicon.ico")
-		//- link(rel="shortcut icon", type="image/ico", href="./static/i/favicon.ico")
+		link(rel="icon", type="image/x-icon", href="./static/i/favicon.ico")
+		link(rel="shortcut icon", type="image/ico", href="./static/i/favicon.ico")
