--- a/static/sass/blocks/index/icatalog.sass
+++ b/static/sass/blocks/index/icatalog.sass
@@ -7,12 +7,22 @@
 		flex-direction: row
 		justify-content: space-between
 
+		@include sdesktop
+			flex-direction: column
+
 	&__text
 		max-width: 870px
 		font-size: 18px
 		line-height: 24px
 		color: $white
 		font-weight: normal
+
+		@include desktop
+			font-size: 17px
+			line-height: 23px
+		
+		@include sdesktop
+			margin-bottom: 15px
 
 	&__link
 		font-size: 18px
@@ -22,6 +32,15 @@
 		border-bottom: 1px solid rgba(255,255,255,.25)
 		transition: .5s border-color
 		align-self: flex-start
+		white-space: nowrap
+		margin-left: 15px
+
+		@include desktop
+			font-size: 17px
+			line-height: 24px
+		
+		@include sdesktop
+			margin-left: 0
 
 		&:hover
 			border-color: $t
@@ -30,33 +49,88 @@
 		position: relative
 		padding-top: calc(640px - 350px)
 		margin-bottom: 46px
+
+		@include desktop
+			padding-top: calc(640px - 343px)
+
+		@include sdesktop
+			padding-top: 0
 	
 	&__imgs
 		position: absolute
 		left: 0
 		top: 0
-		width: 934px
+		width: calc(100% - 506px)
+
+		@include desktop
+			width: 867px
+			width: calc(100% - 433px)
+		
+		@include sdesktop
+			display: none
 
 		img
 			height: 640px
 			object-fit: cover
 			font-family: 'object-fit: cover;'
+
+			@include desktop
+				height: 595px
+	
+	&__imgs-item
+		&:before
+			content: ''
+			position: absolute
+			width: 100%
+			height: 100%
+			top: 0
+			right: 0
+			background-color: $main-blue
+			transition: .5s width
+		
+			@include sdesktop
+				width: 0
 	
 	&__slider
 		display: flex
-		max-width: 1012px
-		margin-left: auto
+		flex-direction: column
+		align-items: flex-end
 		position: relative
+		z-index: 10
+
+		.swiper-container
+			max-width: 1012px
+			margin-right: 0
+
+			@include desktop
+				max-width: 866px
+				width: 100%
+
+			@include sdesktop
+				margin: 0 auto
+
+		.swiper-wrapper
+			@include sdesktop
+				transform: translate(0)!important
+				display: flex
+				flex-wrap: wrap
 
 		.swiper-buttons
 			display: flex
 			justify-content: flex-end
 			position: absolute
-			right: 253px
+			right: 17%
 			top: -161px
 			width: auto
 			transform: translateX(50%)
 			z-index: 1
+
+			@include desktop
+				right: 14%
+				top: -161px
+			
+			@include sdesktop
+				display: none	
 
 		.swiper-button-prev
 			position: static
@@ -69,6 +143,11 @@
 			margin-top: 0
 			transition: .5s transform
 			will-change: transform
+
+			@include desktop
+				background-size: 39px 26px
+				width: 39px
+				height: 26px
 
 			&:hover
 				transform: rotate(180deg) translateX(15px)
@@ -83,6 +162,11 @@
 			transform: translateX(0)
 			transition: .5s transform
 			will-change: transform
+
+			@include desktop
+				background-size: 39px 26px
+				width: 39px
+				height: 26px
 
 			&:hover
 				transform: translateX(15px)
@@ -99,12 +183,39 @@
 		position: relative
 		box-sizing: border-box
 
-		&:nth-child(2n+2):not(&--empty)
-			background-color: $darker-blue
+		@include desktop
+			height: 298px
+			padding: 35px 49px
+			padding-bottom: 40px
+
+		@media (min-width: 1171px)
+			&:nth-child(2n+2):not(&--empty)
+				background-color: $darker-blue
 		
+		@include mob
+			width: 100%!important
+			padding: 35px 29px;
+
+			&:nth-child(even)
+				background-color: $darker-blue!important
+		
+		@media (min-width: 768px) and (max-width: 1170px)
+			&:nth-of-type(2):not(&--empty),
+			&:nth-of-type(3):not(&--empty),
+			&:nth-of-type(6):not(&--empty),
+			&:nth-of-type(7):not(&--empty),
+			&:nth-of-type(10):not(&--empty),
+			&:nth-of-type(11):not(&--empty),
+			&:nth-of-type(14):not(&--empty),
+			&:nth-of-type(15):not(&--empty)
+				background-color: $darker-blue!important
+
 		&--empty
 			background-color: $t
-		
+
+			@include desktop
+				display: none
+
 		&:hover
 			.icatalog
 				&__slider-name
@@ -126,3 +237,14 @@
 			color: $white
 			border-bottom: 1px solid rgba(255,255,255,.25)
 			transition: .5s border-color
+
+			@include desktop
+				font-size: 20px
+				line-height: 24px
+
+	&__slider-icon
+		@include desktop
+			width: 57px
+			height: auto
+			object-fit: cover
+			font-family: 'object-fit: cover;'
