--- a/static/sass/blocks/standart/cards.sass
+++ b/static/sass/blocks/standart/cards.sass
@@ -1,21 +1,44 @@
 .cards
 	display: flex
 	flex-direction: row
+	flex-wrap: wrap
 	margin-right: -36px
 	width: calc(100% + 36px)
+
+
+	@include desktop
+		margin-right: -32px
+		width: calc(100% + 32px)
+
+	@include mob
+		width: 100%
+		margin-right: 0
 
 	&__item
 		width: calc(100% / 3 - 36px)
 		margin-right: 36px
 		display: flex
 		flex-direction: column
+		margin-bottom: 98px
+
+		@include desktop
+			width: calc(100% / 3 - 32px)
+			margin-right: 32px
+		
+		@include pad
+			width: calc(100% / 2 - 32px)
+		
+		@include mob
+			width: 100%
+			margin-right: 0
+			margin-bottom: 40px
 	
 	&__over-img
 		position: relative
 		font-size: 0
 		line-height: 0
 		margin-bottom: 21px
-	
+
 	&__over-link
 		position: absolute
 		left: 0
@@ -24,14 +47,29 @@
 		bottom: 0
 
 	&__over-pic
+		object-fit: cover
+		font-family: 'object-fit: cover;'
 		width: 100%
 		height: 266px
+
+		@include desktop
+			height: 240px
+		
+		@include pad
+			height: 280px
+		
+		@include mob
+			height: 240px
 
 	&__data
 		font-size: 14px
 		line-height: 18px
 		color: $black
 		margin-bottom: 11px
+
+		@include desktop
+			font-size: 13px
+			line-height: 17px
 
 	&__link
 		display: inline-block
@@ -45,9 +83,18 @@
 			border-bottom: 1px solid $border-bottom
 			transition: .5s border-color
 
+			@include desktop
+				font-size: 20px
+				line-height: 24px
+
 			&:hover
 				border-color: $t
+
 	&__text
 		font-size: 15px
 		line-height: 21px
 		color: $black
+
+		@include desktop
+			font-size: 14px
+			line-height: 20px
