--- a/static/pug/blocks/blocks.pug
+++ b/static/pug/blocks/blocks.pug
@@ -2,6 +2,7 @@ include standart/head
 include standart/header
 include standart/footer
 include standart/scripts
+include standart/default
 
 include index/hero
 include index/inews
