--- a/static/pug/index-page.pug
+++ b/static/pug/index-page.pug
@@ -6,7 +6,7 @@ html(lang="ru")
 	body.index
 		.first-screen
 			.first-screen__inner
-			+header
+			+header('./img/logo-white.png')
 			+hero
 		main
 			+icatalog
