--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -181,6 +181,7 @@
 				font-weight: 400
 				margin-right: 0
 				margin-bottom: 5px
+				color: $white!important
 
 		.choices
 			margin-right: 23px
@@ -220,6 +221,7 @@
 				font-size: 22px
 				font-weight: 400
 				text-align: center
+				color: $white!important
 
 		.choices[data-type*="select-one"]:after
 			background-image: inline('header-choises-arrow.svg')
@@ -239,6 +241,7 @@
 			border: none
 			background-color: $dark-blue
 			margin-left: -20px
+			color: $white
 
 			@include mob
 				margin-left: -10px
