--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -15,6 +15,8 @@
 @import blocks/standart/developers
 @import blocks/standart/social
 @import blocks/standart/cards
+@import blocks/standart/default
+@import blocks/standart/breadcrumbs
 
 @import blocks/index/index
 @import blocks/index/inews
