--- a/static/sass/blocks/index/index.sass
+++ b/static/sass/blocks/index/index.sass
@@ -1,6 +1,9 @@
 .index
+	.header__bottom
+		padding-bottom: 0
+		
 	.icatalog
-		padding-top: calc(100vh - 427px)
+		padding-top: calc(100vh - 455px)
 		transition: .5s padding
 		user-select: none
 
