--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -1,6 +1,6 @@
 .header
 	position: relative
-	z-index: 2
+	z-index: 3
 
 	&__top
 		padding: 0 33px
@@ -124,10 +124,12 @@
 		justify-content: space-between
 		padding: 0 33px
 		padding-top: 30px
+		padding-bottom: 26px
 
 		@include desktop
 			padding: 0 30px
 			padding-top: 30px
+			padding-bottom: 26px
 		
 		@include pad
 			justify-content: flex-end
