--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -3,7 +3,6 @@
 @import ext/normalize
 @import variables
 
-@import ext/formatter
 @import ext/choices
 @import ext/swiper
 
@@ -23,3 +22,5 @@
 @import blocks/index/hero
 @import blocks/index/iabout
 @import blocks/index/icatalog
+
+@import blocks/products/products
