--- a/static/sass/blocks/standart/cards.sass
+++ b/static/sass/blocks/standart/cards.sass
@@ -38,6 +38,10 @@
 		font-size: 0
 		line-height: 0
 		margin-bottom: 21px
+		transition: .8s opacity
+
+		&:hover
+			opacity: .8
 
 	&__over-link
 		position: absolute
