--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -215,6 +215,10 @@
 			font-weight: 500
 			color: $white
 			border-bottom: 1px dotted rgba(255,255,255,.25)
+			transition: .5s border-color
+
+			&:hover
+				border-color: $t
 
 			@include desktop
 				font-size: 15px
