--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -80,6 +80,8 @@ h1
 	font-weight: bold
 	line-height: 68px
 
+	text-align: center
+
 	@include desktop
 		font-size: 56px
 		line-height: 60px
@@ -91,7 +93,6 @@ h1
 .ovh
 	overflow: hidden
 	position: fixed
-	// padding-right: 17px
 
 .wrapper
 	max-width: 1440px
