--- a/static/sass/blocks/standart/developers.sass
+++ b/static/sass/blocks/standart/developers.sass
@@ -34,13 +34,13 @@
 		position: absolute
 		top: 50%
 		left: 0
+		border-radius: 3px
 
 		padding-right: 5px
 		padding-left: 6px
 
 		transition: background-color .5s, color .5s
 		transform: translate(0, -50%)
-
 
 		color: white
 		background-color: #e2e2e2
