--- a/static/sass/blocks/standart/cards.sass
+++ b/static/sass/blocks/standart/cards.sass
@@ -21,6 +21,11 @@
 		flex-direction: column
 		margin-bottom: 98px
 
+		&:nth-last-child(1),
+		&:nth-last-child(2),
+		&:nth-last-child(3)
+			margin-bottom: 0
+
 		@include desktop
 			width: calc(100% / 3 - 32px)
 			margin-right: 32px
