--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -23,7 +23,8 @@
 			top: 0
 			right: 0
 			bottom: 0
-			padding: 0 20px
+			padding: 60px 20px
+			padding-bottom: 100px
 			width: 100vw
 			height: 100vh
 			align-items: center
@@ -166,6 +167,7 @@
 				display: flex
 				flex-direction: column
 				margin-bottom: 30px
+				margin-top: 120px
 
 		span
 			font-size: 16px
