--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -5,6 +5,7 @@
 
 @import ext/choices
 @import ext/swiper
+@import ext/lightgallery
 
 @import main
 
@@ -27,3 +28,4 @@
 
 @import blocks/prod-category/prod-category
 
+@import blocks/prod-card/prod-card
