--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -17,6 +17,7 @@
 @import blocks/standart/cards
 @import blocks/standart/default
 @import blocks/standart/breadcrumbs
+@import blocks/standart/not-found
 
 @import blocks/index/index
 @import blocks/index/inews
