--- a/static/pug/blocks/blocks.pug
+++ b/static/pug/blocks/blocks.pug
@@ -10,5 +10,9 @@ include index/iabout
 include index/icatalog
 
 include products/products
+
 include prod-category/prod-category
+
 include prod-card/prod-card
+
+include search-page/search-page
