--- a/static/pug/blocks/standart/footer.pug
+++ b/static/pug/blocks/standart/footer.pug
@@ -112,11 +112,11 @@ mixin footer
 							li.footer__nav-subitem
 								a(href="#").footer__nav-sublink Партнеры и клиенты
 
-					li.footer__nav-item
+					li.footer__nav-item.active
 						a(href="#").footer__nav-link Медиа
 
 						ul.footer__nav-sublist
-							li.footer__nav-subitem
+							li.footer__nav-subitem.active
 								a(href="#").footer__nav-sublink Медиа кит
 							li.footer__nav-subitem
 								a(href="#").footer__nav-sublink Пресс-офис
