--- a/static/pug/products.pug
+++ b/static/pug/products.pug
@@ -2,7 +2,7 @@ include blocks/blocks
 
 doctype html
 html(lang="ru")
-	+head('Главная')
+	+head('Продукция')
 	body.blue.inner
 		+header('./img/logo-white.png')
 		main
