--- a/static/pug/search.pug
+++ b/static/pug/search.pug
@@ -2,10 +2,10 @@ include blocks/blocks
 
 doctype html
 html(lang="ru")
-	+head('Типовая текстовая')
+	+head('Главная')
 	body.white.inner
-		+header('./img/logo-black.png')
+		+header('./img/logo-white.png')
 		main
-			+default
+			+search-page
 		+footer
 	+scripts
