--- a/static/sass/blocks/standart/footer.sass
+++ b/static/sass/blocks/standart/footer.sass
@@ -100,6 +100,10 @@
 		margin-bottom: 31px
 		break-inside: avoid-column
 
+		&.active
+			.footer__nav-link
+				color: $main-blue
+
 		@include pad
 			margin-right: 10px
 
@@ -126,6 +130,10 @@
 	
 	&__nav-subitem
 		margin-bottom: 14px
+
+		&.active
+			.footer__nav-sublink
+				color: $main-blue
 
 	&__nav-sublink
 		font-size: 15px
