--- a/static/pug/blocks/prod-card/prod-card.pug
+++ b/static/pug/blocks/prod-card/prod-card.pug
@@ -26,7 +26,7 @@ mixin prod-card
 						p Первые шаги в разработке бесперебойного источника питания (ИБП) команда начала ещё в в 2012 году и сегодня данное устройство является одним из наиболее перспективных систем бесперебойного электропитания, основанных на современной PWM-бестрансформаторной технологии, которые легко приспосабливаются к самым разнообразным и сложным нагрузкам: нелинейные устройства (IT-системы), большие индуктивные или ёмкостные нагрузки, газоразрядные лампы, асинхронные двигатели и т.д.
 					.lightgallery
 						a(href="https://www.youtube.com/watch?v=_7pmUPMcOYk").prod-card__video Видео о продукте
-					a(href="#").prod-card__link Перейти к характеристикам
+					a(href="#").btn.prod-card__link Перейти к характеристикам
 
 				.prod-card__column
 					.prod-card__overimg
