--- a/static/pug/not-found.pug
+++ b/static/pug/not-found.pug
@@ -2,7 +2,7 @@ include blocks/blocks
 
 doctype html
 html(lang="ru")
-	+head('Главная')
+	+head('404')
 	body.white.inner
 		+header('./img/logo-black.png')
 		main
