--- a/static/pug/prod-card.pug
+++ b/static/pug/prod-card.pug
@@ -2,7 +2,7 @@ include blocks/blocks
 
 doctype html
 html(lang="ru")
-	+head('Главная')
+	+head('Карточка товара')
 	body.white.inner
 		+header('./img/logo-black.png')
 		main
