--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -32,3 +32,7 @@
 @import blocks/prod-card/prod-card
 
 @import blocks/search-page/search-page
+
+@import blocks/contacts/contacts
+
+@import blocks/standart/form-item
