--- a/static/pug/contacts.pug
+++ b/static/pug/contacts.pug
@@ -2,10 +2,11 @@ include blocks/blocks
 
 doctype html
 html(lang="ru")
-	+head('Результаты поиска')
+	+head('Контакты')
+	script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript")
 	body.white.inner
 		+header('./img/logo-black.png')
 		main
-			+search-page
+			+contacts
 		+footer
 	+scripts
