--- a/static/pug/blocks/contacts/contacts.pug
+++ b/static/pug/blocks/contacts/contacts.pug
@@ -26,7 +26,7 @@ mixin contacts
 					p.contacts__label Режим работы
 					p.contacts__time с 09:00 до 18:00 (перерыв с 13:30 до 14:30)
 
-			.contacts__map#js-init-map
+			.contacts__map#js-init-map(data-coords="56.861677, 60.639866")
 
 			.contacts__form
 				p.contacts__form-title Связаться с нами
