--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -18,6 +18,7 @@
 @import blocks/standart/default
 @import blocks/standart/breadcrumbs
 @import blocks/standart/not-found
+@import blocks/standart/subnav
 
 @import blocks/index/index
 @import blocks/index/inews
@@ -36,3 +37,5 @@
 @import blocks/contacts/contacts
 
 @import blocks/standart/form-item
+
+@import blocks/certificates/certificates
