--- a/static/pug/blocks/blocks.pug
+++ b/static/pug/blocks/blocks.pug
@@ -3,6 +3,7 @@ include standart/header
 include standart/footer
 include standart/scripts
 include standart/default
+include standart/hidden-blocks
 
 include index/hero
 include index/inews
@@ -20,3 +21,7 @@ include search-page/search-page
 include contacts/contacts
 
 include certificates/certificates
+
+include news/news
+
+include projects/projects
