--- a/static/pug/news.pug
+++ b/static/pug/news.pug
@@ -2,11 +2,11 @@ include blocks/blocks
 
 doctype html
 html(lang="ru")
-	+head('Продукция')
-	body.blue.inner
-		+header('./img/logo-white.png')
+	+head('Новости')
+	body.white.inner
+		+header('./img/logo-black.png')
 		main
-			+products
+			+news
 		+footer
 		+hidden-blocks
 	+scripts
