--- a/static/sass/blocks/search-page/search-page.sass
+++ b/static/sass/blocks/search-page/search-page.sass
@@ -22,7 +22,6 @@
 		margin-bottom: 94px
 		text-align: center
 
-
 		&:before
 			content: ''
 			position: absolute
@@ -33,6 +32,11 @@
 			height: 100%
 			background-color: #fcfcfc
 			z-index: -1
+		
+		
+		&--popup
+			&:before
+				content: none
 
 		form
 			border-bottom: 1px solid #e4e4e4
