--- a/static/sass/blocks/standart/default.sass
+++ b/static/sass/blocks/standart/default.sass
@@ -97,7 +97,7 @@
 		&:first-child
 			margin-top: 0
 
-	ol
+	ol:not([class])
 		margin-top: 0
 		margin-bottom: 21px
 		padding: 0
@@ -111,7 +111,7 @@
 		& + h3
 			margin-top: 47px
 
-		li
+		li:not([class])
 			position: relative
 
 			padding-left: 35px
@@ -268,11 +268,11 @@
 			line-height: 34px
 			margin-bottom: 30px
 
-		p
+		p:not([class])
 			font-size: 17px
 			line-height: 23px
 
-			a
+			a:not([class])
 				font-size: 17px
 				line-height: 23px
 
