--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -212,3 +212,14 @@ h1
 		&:before
 			width: calc(100% + 4px)
 			height: calc(100% + 4px)
+
+.warning-text
+	font-size: 15px
+	line-height: 21px
+	color: $red
+	font-weight: normal
+	margin-top: 25px
+	display: none
+
+	&.active
+		display: block
