--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -19,6 +19,7 @@
 @import blocks/standart/breadcrumbs
 @import blocks/standart/not-found
 @import blocks/standart/subnav
+@import blocks/standart/popup
 
 @import blocks/index/index
 @import blocks/index/inews
@@ -39,3 +40,7 @@
 @import blocks/standart/form-item
 
 @import blocks/certificates/certificates
+
+@import blocks/news/news
+
+@import blocks/projects/projects
