--- a/static/sass/blocks/standart/form-item.sass
+++ b/static/sass/blocks/standart/form-item.sass
@@ -35,9 +35,12 @@
 		width: 100%
 		color: $black
 		font-weight: normal
-		padding: 0 14px
+		padding: 6px 14px
 		border: 1px solid #e4e4e4
 		font-size: 15px / 21px
+
+		&--h95
+			height: 95px
 
 		&.warning
 			border-color: $red
