--- a/static/pug/projects.pug
+++ b/static/pug/projects.pug
@@ -3,7 +3,7 @@ include blocks/blocks
 doctype html
 html(lang="ru")
 	+head('Реализованные проекты')
-	script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<ваш API-ключ>" type="text/javascript")
+	script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript")
 	body.white.inner
 		+header('./img/logo-black.png')
 		main
